--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 .overlay-blue{
   height: inherit;
   width: 100%;
-  background: rgba(0, 128, 255, 0.35);
+  background: rgba(0, 128, 255, 0.3);
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
@@ -47,11 +47,11 @@
 
 .fadeInLeft{
   position: relative;
-  animation: fadeInLeft 2.5s;
+  animation: fadeInLeft 2s;
 }
 .fadeInRight{
   position: relative;
-  animation: fadeInRight 2.5s;
+  animation: fadeInRight 2s;
 }
 .bounceUp{
   position: relative;
@@ -62,7 +62,10 @@
   overflow-y: hidden;
   animation: fadeInDown 3s;
 }
-
+.zoomInDelay{
+  position: relative;
+  animation: zoomInDelay 3s;
+}
 @keyframes fadeInLeft{
   from{
     left: -300px;
@@ -108,6 +111,21 @@
   to{
     bottom: 0;
     opacity: 1;
+  }
+}
+@keyframes zoomInDelay{
+  0%{
+    display: none;
+    transform: scaleY(0);
+  }
+  75%{
+    display: flex;
+    transform: scaleY(0);
+    opacity: 0.5;
+  }
+  100%{
+    opacity: 1;
+    transform: scaleY(1);
   }
 }
 
