--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -44,3 +44,12 @@
   height: auto;
   max-width: 100%;
 }
+@media screen and (max-width: 796px){
+  .about-me-profile{
+    width: 100%;
+    padding: 2em 0;
+  }
+  .about-me-description{
+    width: 100%;
+  }
+}
