--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -49,3 +49,12 @@
   flex-direction: column;
   width: 100%;
 }
+.education-header-title{
+  font-size: 2.5em;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 1em;
+  font-weight: bold;
+  font-family: 'Maven Pro', sans-serif;
+}
