--- a/src/Components/MainBanner/MainBanner.css
+++ b/src/Components/MainBanner/MainBanner.css
@@ -5,11 +5,11 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   justify-content: center;
   align-content: center;
   align-items: center;
 }
-
 .main-banner-content{
   display: flex;
   width: 100%;
@@ -27,4 +27,17 @@
   margin: 0;
   padding: 0;
   font-size: 1.5em;
+}
+@media screen and (max-width: 796px){
+  .main-banner-title{
+    text-align: center;
+    font-size: 5em;
+  }
+}
+@media screen and (max-width: 500px){
+  .main-banner-title{
+    text-align:center;
+    font-size: 4em;
+    margin-bottom: 0.5em;
+  }
 }
