--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2em;
 }
+.well-text{
+  font-size: 80% !important;
+  color: #7A7A7A;
+}
 .icon-img{
   max-height: 250px;
 }
