--- a/src/Components/AboutMe/Skills/Skills.css
+++ b/src/Components/AboutMe/Skills/Skills.css
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
   width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   margin-top: 1.5em;
 }
 .about-me-skills-list-col{
@@ -13,7 +13,7 @@
   padding: 0 1.5em 0 0.5em;
   max-width: 30%;
   background-color: #FFF;
-  margin: 0.5em 0.3em;
+  margin: 0.5em 0.5em;
   box-shadow: 0 0 5px 1px #5F5F5F;
 }
 .about-me-skills-list{
