styling progress on about and skills

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ main{
   margin: 0;
   padding: 0;
   background-color: #071926;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 750'%3E%3Cg %3E%3Cpolygon fill='%23002440' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23004880' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23006cc1' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%230290ff' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2342acff' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to bottom left, #24C6DC, #514A9D);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 750'%3E%3Cg %3E%3Cpolygon fill='%23002440' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23004880' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23006cc1' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%230290ff' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2342acff' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right, #005EFF, #514A9D);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
