--- a/src/Components/Loading/Loading.css
+++ b/src/Components/Loading/Loading.css
@@ -7,6 +7,7 @@
     background-color: #005EFF;
     background: linear-gradient(to bottom, #5500FF, #005EFF);
 }
+/*css obtained online for this loading animation*/
 .cssload-thecube {
 	width: 73px;
 	height: 73px;
