--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ main{
   padding: 0 !important;
   margin: 0 !important;
 }
+footer{
+  background-color: #222;
+  color: #FFF;
+}
 .paper{
   background-color: #444;
   /* background: radial-gradient(rgba(68,68,68, 1), rgba(34,34,34,1)); */
@@ -55,13 +59,14 @@ main{
   bottom: 1.5em;
   position: fixed;
   border-radius: 50%;
-  padding: 1.5em;
+  padding: 1em;
   background-color: #3f2b96;
   color: #FFF;
   outline: none;
   border: 0.5px solid #3f2b96;
   box-shadow: 0 -1px 9px 1px #565656;
   z-index: 100;
+  font-size: 125%;
 }
 /*custom grid system*/
 .row{
