--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 header{
-    min-height: 100vh !important;
-    height: 100vh !important;
+    min-height: 40em !important;
+    height: 100vh;
     padding: 0;
     margin: 0;
     display: flex;
