--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 main{
-  /* background: linear-gradient(to bottom,#4671C7,#018BE6, #009AFF, #4BB8FF); */
   margin: 0;
   padding: 0;
   background-color: #071926;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 750'%3E%3Cg %3E%3Cpolygon fill='%23002440' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23004880' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23006cc1' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%230290ff' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2342acff' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right, #005EFF, #514A9D);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 750'%3E%3Cg %3E%3Cpolygon fill='%23002440' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23004880' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23006cc1' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%230290ff' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%2342acff' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to bottom left, #005EFF, #8762FF);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -19,7 +18,6 @@ footer{
 }
 .paper{
   background-color: #444;
-  /* background: radial-gradient(rgba(68,68,68, 1), rgba(34,34,34,1)); */
   box-shadow: 0 1px 12px 3px #333;
   margin: 2em 0;
   width: 100%;
@@ -69,6 +67,11 @@ footer{
   font-size: 125%;
 }
 /*custom grid system*/
+.flex-center{
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
 .row{
   display: flex;
   flex-flow: row wrap;
@@ -133,59 +136,7 @@ footer{
   flex-flow: column wrap;
   width: 100%;
 }
-@media screen and (min-width: 1024px){
-  .col-lg-1{
-    display: flex;
-    flex-flow: column wrap;
-    width: 10%;
-  }
-  .col-lg-2{
-    display: flex;
-    flex-flow: column wrap;
-    width: 20%;
-  }
-  .col-lg-3{
-    display: flex;
-    flex-flow: column wrap;
-    width: 30%;
-  }
-  .col-lg-4{
-    display: flex;
-    flex-flow: column wrap;
-    width: 40%;
-  }
-  .col-lg-5{
-    display: flex;
-    flex-flow: column wrap;
-    width: 50%;
-  }
-  .col-lg-6{
-    display: flex;
-    flex-flow: column wrap;
-    width: 60%;
-  }
-  .col-lg-7{
-    display: flex;
-    flex-flow: column wrap;
-    width: 70%
-  }
-  .col-lg-8{
-    display: flex;
-    flex-flow: column wrap;
-    width: 80%;
-  }
-  .col-lg-9{
-    display: flex;
-    flex-flow: column wrap;
-    width: 90%;
-  }
-  .col-lg-10{
-    display: flex;
-    flex-flow: column wrap;
-    width: 100%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px){
+@media (min-width: 768px){
   .paper{
     margin-left: 0;
     margin-right: 0;
@@ -241,6 +192,59 @@ footer{
     width: 100%;
   }
 }
+@media (min-width: 1024px){
+  .col-lg-1{
+    display: flex;
+    flex-flow: column wrap;
+    width: 10%;
+  }
+  .col-lg-2{
+    display: flex;
+    flex-flow: column wrap;
+    width: 20%;
+  }
+  .col-lg-3{
+    display: flex;
+    flex-flow: column wrap;
+    width: 30%;
+  }
+  .col-lg-4{
+    display: flex;
+    flex-flow: column wrap;
+    width: 40%;
+  }
+  .col-lg-5{
+    display: flex;
+    flex-flow: column wrap;
+    width: 50%;
+  }
+  .col-lg-6{
+    display: flex;
+    flex-flow: column wrap;
+    width: 60%;
+  }
+  .col-lg-7{
+    display: flex;
+    flex-flow: column wrap;
+    width: 70%
+  }
+  .col-lg-8{
+    display: flex;
+    flex-flow: column wrap;
+    width: 80%;
+  }
+  .col-lg-9{
+    display: flex;
+    flex-flow: column wrap;
+    width: 90%;
+  }
+  .col-lg-10{
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+  }
+}
+/* animations */
 @keyframes fadeIn{
   from{
     opacity: 0;
