--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -41,3 +41,16 @@ header h1{
     border-radius: 0.2rem;
     box-shadow: 0 0 8px 3px #333;
 }
+
+@media screen and (max-width: 500px){
+    #header-name{
+        font-size: 3.5em;
+        text-align: center;
+        width: 85%;
+    }
+    #header-caption{
+        font-size: 1.5em;
+        text-align: center;
+        width: 85%;
+    }
+}
