--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -12,14 +12,23 @@
     .profile-image{
         width: 50%;
     }
+    .profile-loader{
+        width: 50%;
+    }
 }
 @media screen and (max-width: 796px){
     .profile-image{
         width: 70%;
     }
+    .profile-loader{
+        width: 70%;
+    }
 }
 @media screen and (max-width: 500px){
     .profile-image{
+        width: 90%;
+    }
+    .profile-loader{
         width: 90%;
     }
 }
@@ -28,7 +37,7 @@
     border-radius: 100%;
     margin: 2em 0;
     box-shadow: 0 0 6px 2px #444;
-    animation: loadProfileImage 0.4s;
+    animation: loadProfileImage 0.5s;
     animation-iteration-count: infinite;
     background-color: #DDD;
 }
@@ -40,7 +49,7 @@
         background-color: aliceblue;
     }
     100%{
-        background-color: #04BCFF;
+        background-color: rgb(128, 182, 202);
     }
 }
 /* @keyframes loadProfileImage{
