some styling progress on the education page

--- a/src/App.css
+++ b/src/App.css
@@ -39,18 +39,21 @@ footer{
   padding: 1em;
   color: #FFF;
 }
-.ripple{
+.ripple-nav-btn{
   background-position: center;
   transition: background 0.8s;
 }
-.ripple:hover {
+.ripple-nav-btn:hover {
   background: #504099 radial-gradient(circle, transparent 1%, #504099 1%) center/15000%;
   box-shadow: 0 -1px 10px 2px #565656;
 }
-.ripple:active {
+.ripple-nav-btn:active {
   background-color: #a8c0ff;
   background-size: 100%;
   transition: background 0s;
+}
+.no-display{
+  display: none;
 }
 .nav-btn{
   right: 1.5em;
