--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,3 +1,41 @@
 .Projects{
     padding: 2em 0;
 }
+.project-col{
+    margin: 1em;
+    align-self: stretch !important;
+}
+.project-container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 0.5em;
+}
+.project-description{
+    background-color: #FFF;
+    padding: 1em;
+    color: #000;
+    box-shadow: 0 1px 30px -1px #111;
+}
+.project-image-container{
+    height: 28em;
+    width: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #000;
+    background-position: center;
+    box-shadow: 0 1px 30px -1px #111;
+    margin: 1em 0;
+}
+.project-title{
+    background-color: rgb(0, 132, 255);
+    color: #FFF;
+    padding: 0.75em;
+    box-shadow: 0 1px 30px -1px #111;
+}
+@media screen and (min-width: 1024px){
+    .project-container{
+        padding: 1em;
+    }
+}
