projects page complete, animation on courses needed

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,10 +1,39 @@
+.ripple-nav-btn{
+    background-position: center;
+    transition: background 0.8s;
+}
+.ripple-nav-btn:hover {
+    background: #504099 radial-gradient(circle, transparent 1%, #504099 1%) center/15000%;
+    box-shadow: 0 -1px 10px 2px #565656;
+}
+.ripple-nav-btn:active {
+    background-color: #a8c0ff;
+    background-size: 100%;
+    transition: background 0s;
+}
+.nav-btn{
+    right: 1.5em;
+    bottom: 1.5em;
+    position: fixed;
+    border-radius: 50%;
+    padding: 1em;
+    background-color: #3f2b96;
+    color: #FFF;
+    outline: none;
+    border: 0.5px solid #3f2b96;
+    box-shadow: 0 -1px 9px 1px #565656;
+    z-index: 100;
+    font-size: 125%;
+}
+.nav-btn:hover{
+    cursor: pointer;
+}
 nav{
     width: 16em;
     background-color: #333;
     top: 0;
     position: fixed;
     height: 100vh;
-    left: -20em;
     z-index: 5;
 }
 ul{
@@ -33,4 +62,28 @@ li{
 }
 .nav-link:visited{
     color: #FFF;
+}
+.nav-slide-enter, .nav-slide-enter-active, .nav-active-enter-done{
+    animation-name: slideNavIn;
+    animation-duration: 750ms;
+}
+.nav-slide-exit, .nav-slide-exit-active, .nav-slide-exit-done{
+    animation-name: slideNavOut;
+    animation-duration: 750ms;
+}
+@keyframes slideNavIn{
+    from{
+        left: -20em;
+    }
+    to{
+        left: 0;
+    }
+}
+@keyframes slideNavOut{
+    from{
+        left: 0;
+    }
+    to{
+        left: -20em;
+    }
 }
