--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,23 @@ footer{
 .no-display{
   display: none;
 }
+.error-page-display{
+  height: 100vh;
+  padding: 3em 0;
+  min-height: 20em;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+}
+.error-page-display p{
+  background-color: #FFF;
+  padding: 1em 0.5em;
+  color: rgb(255, 56, 56);
+  text-align: center;
+  font-weight: bold;
+  font-weight: 1.25em;
+}
 /*custom grid system*/
 .flex-center{
   align-content: center;
@@ -111,6 +128,11 @@ footer{
   display: flex;
   flex-flow: column wrap;
   width: 100%;
+}
+@media screen and (max-width: 500px){
+  p{
+    font-size: 0.85em;
+  }
 }
 @media (min-width: 768px){
   .paper{
