--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,8 +14,8 @@ header{
     background-position: center;
 }
 .header-overlay{
-    background: rgba(255, 255, 255, 0.5);
-    background: radial-gradient(rgba(255,255,255,0), #555);
+    background-color: rgba(255, 255, 255, 0.5);
+    background: radial-gradient(rgba(68,68,68,0), #444 85%) !important;
     display: flex;
     flex-flow: column wrap;
     height: 100%;
@@ -24,6 +24,8 @@ header{
     align-content: center;
     align-items: center;
     justify-content: center;
+    animation-name: fadeOutHeaderOverlay;
+    animation-duration: 5s;
 }
 header h1{
     margin: 0;
@@ -40,9 +42,13 @@ header h1{
     font-size: 2em;
     border-radius: 0.2rem;
     box-shadow: 0 0 8px 3px #333;
+    animation-name: slideInHeaderCaption;
+    animation-duration: 2s;
 }
 #header-name{
     text-align: center;
+    animation-name: slideInHeaderName;
+    animation-duration: 1.5s;
 }
 @media screen and (max-width: 500px){
     #header-name{
@@ -54,5 +60,285 @@ header h1{
         font-size: 1.5em;
         text-align: center;
         width: 85%;
+    }
+}
+@keyframes fadeOutHeaderOverlay{
+    0%{
+        background: radial-gradient(rgba(68,68,68,0), #444 0%);
+    }
+    15%{
+        background: radial-gradient(rgba(68,68,68,0), #444 1%);
+    }
+    16%{
+        background: radial-gradient(rgba(68,68,68,0), #444 2%);
+    }
+    17%{
+        background: radial-gradient(rgba(68,68,68,0), #444 3%);
+    }
+    18%{
+        background: radial-gradient(rgba(68,68,68,0), #444 4%);
+    }
+    19%{
+        background: radial-gradient(rgba(68,68,68,0), #444 5%);
+    }
+    20%{
+        background: radial-gradient(rgba(68,68,68,0), #444 6%);
+    }
+    21%{
+        background: radial-gradient(rgba(68,68,68,0), #444 7%);
+    }
+    22%{
+        background: radial-gradient(rgba(68,68,68,0), #444 8%);
+    }
+    23%{
+        background: radial-gradient(rgba(68,68,68,0), #444 9%);
+    }
+    24%{
+        background: radial-gradient(rgba(68,68,68,0), #444 10%);
+    }
+    25%{
+        background: radial-gradient(rgba(68,68,68,0), #444 11%);
+    }
+    26%{
+        background: radial-gradient(rgba(68,68,68,0), #444 12%);
+    }
+    27%{
+        background: radial-gradient(rgba(68,68,68,0), #444 13%);
+    }
+    28%{
+        background: radial-gradient(rgba(68,68,68,0), #444 14%);
+    }
+    29%{
+        background: radial-gradient(rgba(68,68,68,0), #444 15%);
+    }
+    30%{
+        background: radial-gradient(rgba(68,68,68,0), #444 16%);
+    }
+    31%{
+        background: radial-gradient(rgba(68,68,68,0), #444 17%);
+    }
+    32%{
+        background: radial-gradient(rgba(68,68,68,0), #444 18%);
+    }
+    33%{
+        background: radial-gradient(rgba(68,68,68,0), #444 19%);
+    }
+    34%{
+        background: radial-gradient(rgba(68,68,68,0), #444 20%);
+    }
+    35%{
+        background: radial-gradient(rgba(68,68,68,0), #444 21%);
+    }
+    36%{
+        background: radial-gradient(rgba(68,68,68,0), #444 22%);
+    }
+    37%{
+        background: radial-gradient(rgba(68,68,68,0), #444 23%);
+    }
+    38%{
+        background: radial-gradient(rgba(68,68,68,0), #444 24%);
+    }
+    39%{
+        background: radial-gradient(rgba(68,68,68,0), #444 25%);
+    }
+    40%{
+        background: radial-gradient(rgba(68,68,68,0), #444 26%);
+    }
+    41%{
+        background: radial-gradient(rgba(68,68,68,0), #444 27%);
+    }
+    42%{
+        background: radial-gradient(rgba(68,68,68,0), #444 28%);
+    }
+    43%{
+        background: radial-gradient(rgba(68,68,68,0), #444 29%);
+    }
+    44%{
+        background: radial-gradient(rgba(68,68,68,0), #444 30%);
+    }
+    45%{
+        background: radial-gradient(rgba(68,68,68,0), #444 31%);
+    }
+    46%{
+        background: radial-gradient(rgba(68,68,68,0), #444 32%);
+    }
+    47%{
+        background: radial-gradient(rgba(68,68,68,0), #444 33%);
+    }
+    48%{
+        background: radial-gradient(rgba(68,68,68,0), #444 34%);
+    }
+    49%{
+        background: radial-gradient(rgba(68,68,68,0), #444 35%);
+    }
+    50%{
+        background: radial-gradient(rgba(68,68,68,0), #444 36%);
+    }
+    51%{
+        background: radial-gradient(rgba(68,68,68,0), #444 37%);
+    }
+    52%{
+        background: radial-gradient(rgba(68,68,68,0), #444 38%);
+    }
+    53%{
+        background: radial-gradient(rgba(68,68,68,0), #444 39%);
+    }
+    54%{
+        background: radial-gradient(rgba(68,68,68,0), #444 40%);
+    }
+    55%{
+        background: radial-gradient(rgba(68,68,68,0), #444 41%);
+    }
+    56%{
+        background: radial-gradient(rgba(68,68,68,0), #444 42%);
+    }
+    57%{
+        background: radial-gradient(rgba(68,68,68,0), #444 43%);
+    }
+    58%{
+        background: radial-gradient(rgba(68,68,68,0), #444 44%);
+    }
+    59%{
+        background: radial-gradient(rgba(68,68,68,0), #444 45%);
+    }
+    60%{
+        background: radial-gradient(rgba(68,68,68,0), #444 46%);
+    }
+    61%{
+        background: radial-gradient(rgba(68,68,68,0), #444 47%);
+    }
+    62%{
+        background: radial-gradient(rgba(68,68,68,0), #444 48%);
+    }
+    63%{
+        background: radial-gradient(rgba(68,68,68,0), #444 49%);
+    }
+    64%{
+        background: radial-gradient(rgba(68,68,68,0), #444 50%);
+    }
+    65%{
+        background: radial-gradient(rgba(68,68,68,0), #444 51%);
+    }
+    66%{
+        background: radial-gradient(rgba(68,68,68,0), #444 52%);
+    }
+    67%{
+        background: radial-gradient(rgba(68,68,68,0), #444 53%);
+    }
+    68%{
+        background: radial-gradient(rgba(68,68,68,0), #444 54%);
+    }
+    69%{
+        background: radial-gradient(rgba(68,68,68,0), #444 55%);
+    }
+    70%{
+        background: radial-gradient(rgba(68,68,68,0), #444 56%);
+    }
+    71%{
+        background: radial-gradient(rgba(68,68,68,0), #444 57%);
+    }
+    72%{
+        background: radial-gradient(rgba(68,68,68,0), #444 58%);
+    }
+    73%{
+        background: radial-gradient(rgba(68,68,68,0), #444 59%);
+    }
+    74%{
+        background: radial-gradient(rgba(68,68,68,0), #444 60%);
+    }
+    75%{
+        background: radial-gradient(rgba(68,68,68,0), #444 61%);
+    }
+    76%{
+        background: radial-gradient(rgba(68,68,68,0), #444 62%);
+    }
+    77%{
+        background: radial-gradient(rgba(68,68,68,0), #444 63%);
+    }
+    78%{
+        background: radial-gradient(rgba(68,68,68,0), #444 64%);
+    }
+    79%{
+        background: radial-gradient(rgba(68,68,68,0), #444 65%);
+    }
+    80%{
+        background: radial-gradient(rgba(68,68,68,0), #444 66%);
+    }
+    81%{
+        background: radial-gradient(rgba(68,68,68,0), #444 67%);
+    }
+    82%{
+        background: radial-gradient(rgba(68,68,68,0), #444 68%);
+    }
+    83%{
+        background: radial-gradient(rgba(68,68,68,0), #444 69%);
+    }
+    84%{
+        background: radial-gradient(rgba(68,68,68,0), #444 70%);
+    }
+    85%{
+        background: radial-gradient(rgba(68,68,68,0), #444 71%);
+    }
+    86%{
+        background: radial-gradient(rgba(68,68,68,0), #444 72%);
+    }
+    87%{
+        background: radial-gradient(rgba(68,68,68,0), #444 73%);
+    }
+    88%{
+        background: radial-gradient(rgba(68,68,68,0), #444 74%);
+    }
+    89%{
+        background: radial-gradient(rgba(68,68,68,0), #444 75%);
+    }
+    90%{
+        background: radial-gradient(rgba(68,68,68,0), #444 76%);
+    }
+    91%{
+        background: radial-gradient(rgba(68,68,68,0), #444 77%);
+    }
+    92%{
+        background: radial-gradient(rgba(68,68,68,0), #444 78%);
+    }
+    93%{
+        background: radial-gradient(rgba(68,68,68,0), #444 79%);
+    }
+    94%{
+        background: radial-gradient(rgba(68,68,68,0), #444 80%);
+    }
+    95%{
+        background: radial-gradient(rgba(68,68,68,0), #444 81%);
+    }
+    96%{
+        background: radial-gradient(rgba(68,68,68,0), #444 82%);
+    }
+    97%{
+        background: radial-gradient(rgba(68,68,68,0), #444 83%);
+    }
+    98%{
+        background: radial-gradient(rgba(68,68,68,0), #444 84%);
+    }
+    100%{
+        background: radial-gradient(rgba(68,68,68,0), #444 85%);
+    }
+}
+@keyframes slideInHeaderName{
+    from{
+        opacity: 0.05;
+        transform: translate3d(0,120%,0);
+    }
+    to{
+        opacity: 0.9;
+        transform: translate3d(0,0,0);
+    }
+}
+@keyframes slideInHeaderCaption{
+    from{
+        opacity: 0;
+        transform: translate3d(0,200%,0);
+    }
+    to{
+        opacity: 0.9;
+        transform: translate3d(0,0,0);
     }
 }
