--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -28,6 +28,9 @@
 .nav-btn:hover{
     cursor: pointer;
 }
+.nav-btn:focus{
+    outline: 0;
+}
 nav{
     width: 16em;
     background-color: #333;
